--- a/sextant/src/index.css
+++ b/sextant/src/index.css
@@ -1,4 +1,3 @@
-
 :root {
   --primary-color: rgb(217, 146, 75);
   --background-color: rgb(34, 44, 53);
@@ -9,5 +8,28 @@
 
 .App {
   background-color: var(--background-dark-color);
+  height: 100%;
   height: 100vh;
+}
+
+.greeting {
+  font-family: "Raleway", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 300;
+  color: var(--text-main-color);
+  margin: 0;
+  padding: 40px 30px 20px 40px;
+  letter-spacing: 1px;
+
+}
+
+.greeting span {
+  color: var(--primary-color);
+}
+
+.dataContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  margin: 0;
+  overflow-y: hidden;
 }
