--- a/sextant/src/styles/Header.module.css
+++ b/sextant/src/styles/Header.module.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid var(--text-color);
 }
 
 .mainContainer h1 {
@@ -15,4 +16,5 @@
     background-clip: text;
     -webkit-text-fill-color: transparent; */
     letter-spacing: 1px;
+  font-weight: 500;
 }
