--- a/sextant/src/index.css
+++ b/sextant/src/index.css
@@ -20,7 +20,6 @@
   margin: 0;
   padding: 40px 30px 20px 40px;
   letter-spacing: 1px;
-
 }
 
 .greeting span {
@@ -32,4 +31,25 @@
   grid-template-columns: repeat(4, 25%);
   margin: 0;
   overflow-y: hidden;
+}
+
+@media (max-width: 1700px) {
+  .dataContainer {
+    grid-template-columns: repeat(3, 33%);
+  }
+}
+@media (max-width: 1300px) {
+  .dataContainer {
+    grid-template-columns: repeat(2, 50%);
+  }
+}
+@media (max-width: 700px) {
+  .App {
+    background-color: var(--background-dark-color);
+    height: 100vh;
+    height: 100%;
+  }
+  .dataContainer {
+    grid-template-columns: repeat(1, 100%);
+  }
 }
