--- a/sextant/src/styles/DataComponent.module.css
+++ b/sextant/src/styles/DataComponent.module.css
@@ -24,10 +24,11 @@
 }
 
 .mainContainer h2 {
+  border: 1px solid red;
   color: var(--text-color);
-  font-size: 1.8rem;
+  font-size: 100%;
   font-family: "Raleway", sans-serif;
-font-weight: 300;
+  font-weight: 300;
   padding: 12px 0;
 }
 
