--- a/sextant/src/styles/DataComponent.module.css
+++ b/sextant/src/styles/DataComponent.module.css
@@ -24,9 +24,11 @@
 }
 
 .mainContainer h2 {
+  height: 60%;
   border: 1px solid red;
   color: var(--text-color);
   font-size: 100%;
+  font-size: 30px;
   font-family: "Raleway", sans-serif;
   font-weight: 300;
   padding: 12px 0;
